syntax = "proto3";
package treasure.policy.v1;
option java_multiple_files = true;
option java_package = "com.mysillydreams.treasure.grpc.policy.v1";
option java_outer_classname = "TreasurePolicyProto";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service TreasurePolicyService {
  rpc GetPolicies(GetPoliciesRequest) returns (GetPoliciesResponse);
  rpc SetPolicy(SetPolicyRequest) returns (Policy);
  rpc ApplyInviteOverride(ApplyInviteOverrideRequest) returns (ApplyInviteOverrideResponse);
}

message Policy {
  string id = 1;
  string scope = 2;     // GLOBAL|COHORT|USER
  string scope_ref = 3; // cohort name or userId
  google.protobuf.Struct policy_json = 4;
  bool active = 5;
}

message GetPoliciesRequest { string scope = 1; string scope_ref = 2; }
message GetPoliciesResponse { repeated Policy items = 1; }

message SetPolicyRequest {
  string id = 1;                 // empty => create
  string scope = 2;
  string scope_ref = 3;
  google.protobuf.Struct policy_json = 4;
  bool active = 5;
}

message ApplyInviteOverrideRequest {
  string inviter_user_id = 1;
  string invitee_user_id = 2;
  int32 beginner_level_cap = 3;      // e.g., 100
  int32 intermediate_level_cap = 4;  // e.g., 50
}
message ApplyInviteOverrideResponse { bool applied = 1; string message = 2; }
